--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.553.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
