--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dexie": "^4.0.4",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.553.0",
