--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
-VITE_FIREBASE_API_KEY="AIzaSyAgwFECmmUXjyaZc2r65541sfffPBFmmsXY"
+VITE_FIREBASE_API_KEY="AIzaSyAgwFECmmUXjyaZc2r6554IsffPBFmmsXY"
 VITE_FIREBASE_AUTH_DOMAIN="reglazemequote.firebaseapp.com"
 VITE_FIREBASE_PROJECT_ID="reglazemequote"
-VITE_FIREBASE_STORAGE_BUCKET="reglazemequote.appspot.com"
-VITE_FIREBASE_MESSAGING_SENDER_ID="57313680814"
-VITE_FIREBASE_APP_ID="1:57313680814:web:10c33d828c3485d5a7e537"
+VITE_FIREBASE_STORAGE_BUCKET="reglazemequote.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="573136801814"
+VITE_FIREBASE_APP_ID="1:573136801814:web:10c33d828c3485d5a7e537"
+VITE_FIREBASE_MEASUREMENT_ID="G-J47F8N177B"
