--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.553.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,10 +29,11 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "prettier": "3.7.4",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vite-plugin-pwa": "^0.20.5",
+    "vite": "^7.3.0",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.3"
   }
 }
