Security & error handling improvements
- Add comprehensive .gitignore for environment files
- Create ErrorBoundary component for global error handling
- Add Firestore and Storage security rules with tenant isolation
- Create error handling utilities for consistent Firebase operations
- Update quotes and clients stores with proper error handling
- Add Firebase config validation
- Improve auth error messages
- Create deployment and security documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,13 @@
         "scminput": false
     },
     "emmet.showExpandedAbbreviation": "never",
-    "editor.quickSuggestions": {
-        "other": "on",
-        "comments": "off",
-        "strings": "on"
-    },
-    "editor.wordBasedSuggestions": "off",
+"editor.quickSuggestions": {
+    "other": "on",
+    "comments": "off",
+    "strings": "on"
+},
+"css.validate": false,
+"editor.wordBasedSuggestions": "off",
     "editor.suggest.showWords": false,
     "github.copilot.editor.enableAutoCompletions": true,
     "inlineChat.mode": "live"
